Add rating_reason field to ChatResponseRating model, serializer (#323)
